8241142: Shenandoah: should not use parallel reference processing with single GC thread

Reviewed-by: shade